# Millennium

./: .gitignore  CMakeLists.txt  README.md  flake.nix  shell.nix
.github/workflows/: ci.yml
include/: cmd.h
nix/: assets.nix  millennium.nix  windows.nix
nix/python/: core-utils.nix  millennium.nix
nix/typescript/: shims.nix
scripts/: install.sh
scripts/cmake/: bootstrap_deps.cmake  generate_virtfs.cmake
src/: CMakeLists.txt  main.cc
src/backend/: entry_point.cc  library_updater.cc
src/boot/linux/: CMakeLists.txt  main.c
src/core/: backend_mgr.cc  http_hook.cc  init.cc  millennium_updater.cc
src/hhx64/: CMakeLists.txt
src/hooks/: steam_hooks.cc
src/plat/: init_posix.cc  init_posix_deprecated.cc
src/sys/: env.cc
